@@ -23,10 +23,8 @@ S3method(getGeneSet,KEGG)
 S3method(getGeneSet,MF)
 export(Gff2GeneTable)
 export(buildGOmap)
-export(buildKEGGmap)
 export(cnetplot)
 export(compareCluster)
-export(download.KEGG)
 export(enrichGO)
 export(enrichKEGG)
 export(enrichMap)
