@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/enrichKEGG.R
+% Please edit documentation in R/utilities.R
 \name{download.KEGG}
 \alias{download.KEGG}
 \title{download.KEGG}
