@@ -8,7 +8,7 @@ categories with FDR control.}
 \usage{
 enrichKEGG(gene, organism = "human", pvalueCutoff = 0.05,
   pAdjustMethod = "BH", universe, minGSSize = 5, qvalueCutoff = 0.2,
-  readable = FALSE, use.KEGG.db = TRUE)
+  readable = FALSE, use.KEGG.db = FALSE)
 }
 \arguments{
 \item{gene}{a vector of entrez gene id.}
