@@ -1,5 +1,7 @@
 CHANGES IN VERSION 2.1.3
 ------------------------
+ o fully support of using online version of KEGG in enrichKEGG,
+   using online version is now by default of enrichKEGG <2015-01-28, Wed>
  o update CITATION <2015-01-28, Wed>
  
 CHANGES IN VERSION 2.1.2
